syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Sample";

enum OfferAclType {
	None = 0;
	Game = 1;
	DedicatedServer = 2;//blablabla
	WebPortal = 4;
	Services = 8;
	Internal = 14;
	Public = 15;
}


